Clean up meta buttons. Possibly broke my mail script too

--- a/schema/meta/tenant.properties
+++ b/schema/meta/tenant.properties
@@ -2,7 +2,7 @@ topic=configuretenant
 hide_json_preview="true"
 permit_dynamic_types="false"
 hide_routes="true"
-post_text="Create Tenant"
+post_text="Update Config+Schemas"
 post_button_color="#8B4513"
 route=https://v3zus6fe5m.execute-api.us-east-1.amazonaws.com/dev/api/json
 authorized_reads=true
